--- a/resources/sass/components/jumbotron.scss
+++ b/resources/sass/components/jumbotron.scss
@@ -43,6 +43,13 @@
                 border-radius: 5px 5px 0 0;
                 transition: all ease-in-out;
 
+                 @media screen and (max-width: 375px){
+
+                    width: 90%;
+                    margin: auto;
+                    left: 5%;
+                }
+
                 label{
                     font-size: 32px;
                     font-weight: 600;
@@ -71,6 +78,11 @@
         width: 250px;
         background-color: #fff;
         border-radius: 0px 0px 5px 5px;
+
+         @media screen and (max-width: 375px){
+
+            top: 350px;
+        }
 
         ul{
             list-style: none;
