--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -29,6 +29,13 @@
         justify-content: center;
         align-items: center;
         width: 50%;
+
+         @media screen and (max-width: 375px){
+
+            width: 90%;
+            text-align: center;
+
+        }
     }
 
 }
@@ -48,6 +55,11 @@
         margin: 20px auto;
         background-color: white;
         border-radius: 5px;
+
+        @media screen and (max-width: 375px){
+
+            width: 95%;
+        }
 
         a{
             text-decoration: none;
@@ -77,6 +89,14 @@
             align-items: center;
             justify-content: center;
             color: #1F8691;
+
+             @media screen and (max-width: 375px){
+
+                h3{
+                    padding: 0 20px;
+                }
+
+            }
         }
 
         .categories-type-list{
