--- a/resources/sass/layouts/payment.scss
+++ b/resources/sass/layouts/payment.scss
@@ -9,6 +9,11 @@
     flex-direction: column;
     justify-content: space-around;
 
+     @media screen and (max-width: 375px){
+
+        width: 100%;
+    }
+
     .payment-header{
 
         margin: 10px 20px;
@@ -33,6 +38,7 @@
                 padding: 5px 10px;
                 border-radius: 5px;
                 color: #007E8E;
+                margin-right: 10px;
                 &:hover{
 
                     border: 2px solid #007E8E;
@@ -126,6 +132,13 @@
             align-items: center;
             justify-content: center;
             border-radius: 5px;
+
+            @media screen and (max-width: 375px){
+
+                width: 100%;
+                height: 100%;
+                background-color: white;
+            }
         }
 
         .hide-button{
