DONE: GUEST_PATH RESPONSIVE
header button need fix

--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -85,6 +85,18 @@
                     padding: 5px;
 
                 }
+
+                .restaurant-description{
+
+                    @media screen and (max-width: 375px){
+
+                        overflow-y: auto;
+
+                    }
+
+
+
+                }
             }
             .description-right{
 
