--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -70,6 +70,11 @@
             background-color: #1F8691;
             margin: 20px;
 
+            @media screen and (max-width: 375px){
+
+                width: 100%;
+                margin: 0;
+            }
 
             .type-span{
 
@@ -77,6 +82,11 @@
                 font-weight: 600;
                 color: white;
                 text-transform: uppercase;
+
+                @media screen and (max-width: 375px){
+
+                   margin-left: 20px;
+                }
             }
 
 
@@ -93,8 +103,6 @@
 
                     width: 100%;
                     margin: auto;
-                    position: relative;
-                    left: -20px;
                 }
 
                 .dish-card{
@@ -557,6 +565,7 @@
     @media screen and (max-width: 375px){
 
         width: 100%;
+        min-height: 100%;
     }
 
 
@@ -592,6 +601,12 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+            @media screen and (max-width: 375px){
+
+                min-height: 100%;
+
+            }
 
 
         h4{
