--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -292,13 +292,23 @@
                 }
             }
 
+            .cart-subtotprice{
+
+                width: 80%;
+                display: flex;
+                margin: 1px 0;
+                justify-content: space-between;
+                font-size: 13px;
+                font-weight: bold;
+            }
+
             .cart-totprice{
 
                 width: 80%;
                 display: flex;
                 margin: 20px 0;
                 justify-content: flex-end;
-                font-size: 30px;
+                font-size: 20px;
                 font-weight: 600;
 
                 .totprice{
@@ -333,9 +343,9 @@
 
 .cart-checkout-container{
 
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgb(99 168 195);
     box-shadow: 5px 10px 18px #14555c;
     display: flex;
@@ -488,6 +498,31 @@
             }
         }
 
+        .cart-subtotprice{
+
+            display: flex;
+            width: 94%;
+            margin: auto;
+            padding-top: 20px;
+            justify-content: space-between;
+            font-size: 15px;
+        }
+
+        .cart-totprice{
+
+            display: flex;
+            width: 95%;
+            margin: auto;
+            justify-content: flex-end;
+            font-size: 25px;
+            margin-top: 15px;
+
+            .totalspace{
+
+                margin-right: 30px;
+            }
+        }
+
         .checkout-cart-totprice{
 
             width: 95%;
@@ -512,7 +547,12 @@
             justify-content: center;
             margin: 30px 0px;
 
-            .button-payment{
+            input{
+
+                display: none;
+            }
+
+            button{
 
                 margin: auto;
                 border-radius: 5px;
@@ -520,7 +560,7 @@
                 font-weight: bold;
                 cursor: pointer;
                 background-color: rgb(2, 150, 241);
-                padding: 15px 10px;
+                padding: 10px 5px;
                 box-shadow: 2px 5px 5px #14555c;
                 text-align: center;
                 text-decoration: none;
