Auto stash before merge of "master" and "origin/master"

--- a/resources/sass/components/footer.scss
+++ b/resources/sass/components/footer.scss
@@ -7,7 +7,7 @@
 }
 
 .footer-bg{
-    background-color: #1F8691;
+    background-color: #424445;
     min-height: 300px;
     width: 100%;
 
@@ -97,7 +97,7 @@
                 &:hover,
                 &:focus,
                 &:active {
-                    color: #2a20b8;
+                    color: #493cfd;
                 }
 
             }
