--- a/resources/sass/components/home-header.scss
+++ b/resources/sass/components/home-header.scss
@@ -36,7 +36,7 @@
             justify-content: center;
             width: 100%;
             font-family: "Nunito", sans-serif;
-            font-size: 1.3rem;
+            font-size: 30px;
             font-weight: bold;
             color: #007E8A;
 
