--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -81,8 +81,7 @@
 
                 }
                 .restaurant-address, .restaurant-email, .restaurant-telephone, .restaurant-description{
-
-                    padding: 5px;
+                    margin: 10px 0 10px 15px;
 
                 }
 
