--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -65,10 +65,7 @@
 
         .menu-type{
 
-            list-style: none;
             width: 100%;
-            background-color: #1F8691;
-            margin: 20px;
 
             @media screen and (max-width: 375px){
 
@@ -89,15 +86,14 @@
                 }
             }
 
+                .type-span{
 
-            .dishes-list{
+                    font-size: 25px;
+                    font-weight: 600;
+                    color: white;
+                    text-transform: uppercase;
+                }
 
-                width: 50%;
-                padding: 30px;
-                display: flex;
-                flex-wrap: wrap;
-                margin-top: 20px;
-                margin-left: 10px;
 
                  @media screen and (max-width: 375px){
 
@@ -107,16 +103,14 @@
 
                 .dish-card{
 
-                    height: 150px;
-                    transition: box-shadow 0.2s ease-in-out;
-                    margin-right: 20px;
-                    cursor: pointer;
-                    background-color: white;
-                    border-radius: 5px;
-                    &:hover{
+                    width: 50%;
+                    padding: 30px;
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin-top: 20px;
+                    margin-left: 10px;
 
-                        box-shadow: 5px 10px 18px #14555c;
-                    }
+                    .dish-card{
 
                      @media screen and (max-width: 375px){
 
@@ -126,9 +120,8 @@
 
                     .dish-card-container{
 
-                        height: 100%;
-                        padding: 10px;
-                        display: flex;
+                            box-shadow: 5px 10px 18px #14555c;
+                        }
 
                          @media screen and (max-width: 375px){
 
@@ -138,48 +131,54 @@
 
                         .dish-name-price{
 
-                            display: flex;
-                            flex-direction: column;
                             height: 100%;
-                            width: 70%;
+                            padding: 10px;
+                            display: flex;
 
-                            .dish-name, .dish-price, .dish-ingr{
+                            .dish-name-price{
 
                                 display: flex;
-                                align-items: center;
-
-                            }
-                            .dish-name, .dish-price{
-
-                                min-height: 25%;
-                            }
-                            .dish-ingr{
-
-                                min-height: 50%
-
-                            }
-
-                        }
-
-                        .dish-img{
-
-                            width: 30%;
-                            height: 80px;
-                            margin: auto;
-
-                            img{
-
-                                width: 100%;
+                                flex-direction: column;
                                 height: 100%;
-                                object-position: center;
+                                width: 70%;
+
+                                .dish-name, .dish-price, .dish-ingr{
+
+                                    display: flex;
+                                    align-items: center;
+
+                                }
+                                .dish-name, .dish-price{
+
+                                    min-height: 25%;
+                                }
+                                .dish-ingr{
+
+                                    min-height: 50%
+
+                                }
+
+                            }
+
+                            .dish-img{
+
+                                width: 30%;
+                                height: 80px;
+                                margin: auto;
+
+                                img{
+
+                                    width: 100%;
+                                    height: 100%;
+                                    object-position: center;
+                                }
                             }
                         }
                     }
                 }
             }
+
         }
-
-
 
         .container-cart{
 
@@ -187,7 +186,7 @@
             margin-right: 40px;
             margin-bottom: 30px;
             height: 50%;
-            width: 100%;
+            width: 75%;
             background: white;
             box-shadow: 5px 10px 18px #14555c;
             display: flex;
