--- a/resources/sass/components/home-header.scss
+++ b/resources/sass/components/home-header.scss
@@ -56,7 +56,37 @@
             color: #007E8A;
             font-weight: bold;
             margin-right: 10px;
+
+            @media screen and (max-width: 375px){
+
+                width: 100px;
+                margin-left: 10px;
+                margin-bottom: 10px;
+            }
+
         }
+
+        .resp-disp-none{
+
+            @media screen and (max-width: 375px){
+
+                display: none;
+            }
+        }
+
+        .resp-lg-disp-none{
+
+            @media screen and (min-width: 400px){
+
+                display: none;
+            }
+        }
+
+        .resp-head-pop-mtop{
+
+            margin-top: 20px;
+        }
+
         .navbar-color-style{
 
             color: #007E8A;
@@ -70,6 +100,13 @@
             margin-top: 10px;
             height: 260px;
             width: 400px;
+
+            @media screen and (max-width: 375px){
+
+                left: -361px;
+                top: 0;
+            }
+
 
         }
 
