--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -2,6 +2,12 @@
     display: flex;
     height: 100vh;
 
+     @media screen and (max-width: 375px){
+
+        display: block;
+
+    }
+
     #dashboard-nav{
 
         width: 15%;
@@ -24,6 +30,14 @@
             min-height: 100px;
             overflow-y: auto;
 
+
+        }
+
+        @media screen and (max-width: 375px){
+
+            width: 100%;
+            height: auto;
+
         }
     }
 
@@ -31,6 +45,12 @@
 
         width: 85%;
         overflow-y: auto;
+        text-align: center;
+
+            @media screen and (max-width: 375px){
+
+                width: 100%;
+            }
 
         .protected-content-flex{
 
@@ -41,6 +61,13 @@
             align-items: center;
             height: 100vh;
             color: #1F8691;
+
+             @media screen and (max-width: 375px){
+
+                display: none;
+
+            }
+
         }
 
         .main-content-container{
@@ -48,9 +75,20 @@
             background: linear-gradient(45deg,rgb(87, 243, 230), #1F8691);
             padding: 30px 50px;
 
+                @media screen and (max-width: 375px){
+
+                    padding: 10px;
+                }
+
+
             .restaurant-delete-edit{
 
                 display: flex;
+
+                @media screen and (max-width: 375px){
+
+                    display: block;
+                }
 
                 .protected-company-name{
 
@@ -58,6 +96,13 @@
                     align-items: center;
                     font-size: 20px;
                     font-weight: bold;
+
+                    @media screen and (max-width: 375px){
+
+                        text-align: center;
+                        width: 100%;
+                        display: block;
+                    }
 
                 }
 
@@ -68,6 +113,11 @@
                     form {
 
                         margin: 10px 30px;
+
+                        @media screen and (max-width: 375px){
+
+                            margin: 10px;
+                        }
                     }
 
                 }
@@ -87,6 +137,11 @@
         .dishes-list{
 
             margin-top: 40px;
+
+                @media screen and (max-width: 375px){
+
+                    margin-top: 20px;
+                }
 
             ul{
 
@@ -109,6 +164,12 @@
                         background-color: white;
                         border-radius: 5px 5px 0 0;
                         border-bottom: 1px solid black;
+
+                        @media screen and (max-width: 375px){
+
+                            flex-direction: column;
+                            min-height: 150px;
+                        }
 
                         .dish-name{
 
@@ -137,10 +198,24 @@
                     .dish-info-img{
 
                         display: flex;
+                        height: 100%;
+
+                        @media screen and (max-width: 375px){
+
+                            width: 100%;
+                            height: 100%;
+
+                        }
 
                         .dish-info{
 
                             width: 50%;
+                            height: 100%;
+
+                            @media screen and (max-width: 375px){
+
+                                height: 100%;
+                            }
 
                             .price, .type, .discount{
 
@@ -155,6 +230,22 @@
                                 background-color: white;
                                 border-radius: 0 0 0 5px;
                                 margin-bottom: 20px;
+
+                                @media screen and (max-width: 375px){
+
+                                    height: 79px;
+                                    padding: 5px;
+                                }
+
+                                .ingredient-list-scroll{
+
+                                    @media screen and (max-width: 375px){
+
+                                        overflow-y: auto;
+                                        overflow-x: hidden;
+                                        height: 46px;
+                                    }
+                                }
                             }
                         }
 
@@ -162,11 +253,18 @@
 
                             width: 50%;
                             background-color: white;
-                            height: 188px;
+                            height: 100%;
+                            padding: 11px 0;
                             border-radius: 0 0 5px 0;
                             display: flex;
                             align-items: center;
                             justify-content: center;
+
+                            @media screen and (max-width: 375px){
+
+                                height: 100%;
+                                padding: 7.5px 0;
+                            }
 
                             img{
 
@@ -201,6 +299,11 @@
                     align-items: center;
                     justify-content: center;
 
+                     @media screen and (max-width: 375px){
+
+                        margin: 50px 0;
+                    }
+
                     .main-link{
 
                         margin-right: 30px;
@@ -234,12 +337,29 @@
                                 color: #FABD12;
                             }
 
+
+
+                        }
+
+                        #selYears{
+
+                             @media screen and (max-width: 375px){
+
+                                padding-left: 25px;
+
+                            }
+
                         }
                     }
 
                     .second-link{
 
                         margin-right: 30px;
+
+                         @media screen and (max-width: 375px){
+
+                            margin-right: 0;
+                        }
 
                         div{
                             line-height: 40px;
@@ -296,6 +416,12 @@
                     margin: auto;
                     padding-bottom: 40px;
 
+                    @media screen and (max-width: 375px){
+
+                        width: 100%;
+                        height: 600px;
+                    }
+
                     #myChart{
 
                         background-color: white;
@@ -309,6 +435,12 @@
                     width: 80%;
                     margin: auto;
                     padding-bottom: 40px;
+
+                    @media screen and (max-width: 375px){
+
+                        width: 100%;
+                        height: 600px;
+                    }
 
                     #myChart2{
 
