--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -13,9 +13,29 @@
         width: 15%;
         height: 100%;
         padding: 0 30px;
-        border-right: 1px solid black;
         display: flex;
         flex-direction: column;
+        background-color: #FABD12;
+        font-size: 15px;
+        font-weight: 600;
+
+        a{
+
+            text-decoration: none;
+            border: 1px solid #FABD12;
+            padding: 5px 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            color: #007E8E;
+            margin-right: 10px;
+
+                &:hover{
+
+                    border: 2px solid #007E8E;
+                    color: white;
+                    margin: 10px 0;
+                }
+        }
 
         & > div{
             margin-top: 20px;
@@ -72,7 +92,7 @@
 
         .main-content-container{
 
-            background: linear-gradient(45deg,rgb(87, 243, 230), #1F8691);
+            background-color: #1F8691;
             padding: 30px 50px;
 
                 @media screen and (max-width: 375px){
@@ -195,10 +215,16 @@
                         }
                     }
 
-                    .dish-info-img{
+                    .dish-info-container{
 
                         display: flex;
+                        justify-content: space-around;
+                        align-items: center;
+                        width: 100%;
                         height: 100%;
+                        background-color: #FABD12;
+                        border-radius: 0 0 5px 5px;
+                        margin: 0 0 30px 0;
 
                         @media screen and (max-width: 375px){
 
@@ -221,15 +247,12 @@
 
                                 padding: 10px 0;
                                 padding-left: 20px;
-                                background-color: white;
                             }
 
                             .ingredients{
 
                                 padding: 20px;
-                                background-color: white;
                                 border-radius: 0 0 0 5px;
-                                margin-bottom: 20px;
 
                                 @media screen and (max-width: 375px){
 
@@ -248,32 +271,6 @@
                                 }
                             }
                         }
-
-                        .dish-img-info{
-
-                            width: 50%;
-                            background-color: white;
-                            height: 100%;
-                            padding: 11px 0;
-                            border-radius: 0 0 5px 0;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-
-                            @media screen and (max-width: 375px){
-
-                                height: 100%;
-                                padding: 7.5px 0;
-                            }
-
-                            img{
-
-                                height: 150px;
-                                width: 150px;
-                                border-radius: 5px;
-                            }
-                        }
-
                     }
                 }
             }
