--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -92,7 +92,7 @@
 
             .dishes-list{
 
-                width: 50%;
+                width: 80%;
                 padding: 30px;
                 display: flex;
                 flex-wrap: wrap;
@@ -108,6 +108,7 @@
                 .dish-card{
 
                     height: 150px;
+                    width: 90%;
                     transition: box-shadow 0.2s ease-in-out;
                     margin-right: 20px;
                     cursor: pointer;
@@ -183,11 +184,13 @@
 
         .container-cart{
 
-            margin-top: 55px;
+            margin-top: 126px;
             margin-right: 40px;
+            margin-left: 40px;
             margin-bottom: 30px;
+            /* margin: auto; */
             height: 50%;
-            width: 100%;
+            width: 30%;
             background: white;
             box-shadow: 5px 10px 18px #14555c;
             display: flex;
@@ -198,7 +201,8 @@
 
              @media screen and (max-width: 375px){
 
-                margin: auto 0;
+                margin: auto;
+                width: 95%;
             }
 
             .container-cart-title{
@@ -226,15 +230,16 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    margin: 10px 0;
 
                     .dish-details{
 
                         width: 150px;
                         display: flex;
-                        align-items: center;
-                        justify-content: flex-end;
+                        /* align-items: center; */
+                        /* justify-content: flex-end; */
                         flex-direction: column;
-                        margin: 10px;
+                        /* margin: 10px; */
 
                         .cart-dish-img{
 
@@ -253,14 +258,20 @@
                         }
 
                         .cart-dish-name{
+
                             display: flex;
-                            justify-content: flex-end;
+                            /* justify-content: flex-end; */
+                            @media screen and (max-width: 375px){
+
+                                padding-left: 10px;
+                            }
+
                         }
                     }
 
                     .cart-quantity{
 
-                        margin: 0 10px;
+                        /* margin: 0 10px; */
                         border-radius: 5px;
                         padding: 5px;
                         color: black;
@@ -300,6 +311,12 @@
                 justify-content: space-between;
                 font-size: 13px;
                 font-weight: bold;
+
+                @media screen and (max-width: 375px){
+
+                    width: 95%;
+                    margin: auto;
+                }
             }
 
             .cart-totprice{
