--- a/resources/sass/components/carousel.scss
+++ b/resources/sass/components/carousel.scss
@@ -78,7 +78,7 @@
             display: flex;
             justify-content: left;
             align-items: center;
-            overflow-x: scroll;
+            overflow-x: auto;
             background-color: #1F8691;
             border-radius: 5px;
 
