--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -89,6 +89,7 @@
             align-items: center;
             justify-content: center;
             color: #1F8691;
+            text-transform: capitalize;
 
              @media screen and (max-width: 375px){
 
