--- a/resources/sass/layouts/payment.scss
+++ b/resources/sass/layouts/payment.scss
@@ -64,10 +64,10 @@
 
             input{
 
-                &:valid{
+/*                 &:valid{
 
                     border: 2px solid green;
-                }
+                } */
 
                 &:invalid{
 
