--- a/resources/sass/components/carousel.scss
+++ b/resources/sass/components/carousel.scss
@@ -71,7 +71,7 @@
 
         .section-carousel{
 
-            width: 80%;
+            width: 1180px;
             height: 150px;
             background: #f4f4f4;
             margin: 10px auto;
