--- a/resources/sass/components/footer.scss
+++ b/resources/sass/components/footer.scss
@@ -7,7 +7,7 @@
 }
 
 .footer-bg{
-    background-color: #424445;
+    background-color: #1F8691;
     min-height: 300px;
     width: 100%;
 
@@ -28,7 +28,7 @@
 
        .footer-card{
 
-            background-color: #FABD12;
+            background-color: white;
             padding: 15px;
             width: calc(100%/4.2);
             height: 430px;
