--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -19,21 +19,23 @@
         font-size: 15px;
         font-weight: 600;
 
+        .sidebar-restaurant-link{
+            margin: 20px 0;
+        }
+
         a{
 
             text-decoration: none;
-            border: 1px solid #FABD12;
-            padding: 5px 10px;
-            margin: 10px 0;
+            padding: 2px 5px;
             border-radius: 5px;
-            color: #007E8E;
-            margin-right: 10px;
+            margin: 10px 0;
+            color: white;
+            background-color: #1F8691;
 
                 &:hover{
 
-                    border: 2px solid #007E8E;
+                    background-color: #1F8691;
                     color: white;
-                    margin: 10px 0;
                 }
         }
 
