--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -12,18 +12,19 @@
 
         width: 15%;
         height: 100%;
-        padding: 0 30px;
+        padding: 0 20px;
         display: flex;
         flex-direction: column;
         background-color: #FABD12;
         font-size: 15px;
         font-weight: 600;
+        text-transform: capitalize;
 
         a{
 
             text-decoration: none;
             border: 1px solid #FABD12;
-            padding: 5px 10px;
+            padding: 5px 0;
             margin: 10px 0;
             border-radius: 5px;
             color: #007E8E;
@@ -56,7 +57,8 @@
         @media screen and (max-width: 375px){
 
             width: 100%;
-            height: auto;
+            height: 667px;
+
 
         }
     }
