--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -468,7 +468,7 @@
 
                 @media screen and (max-width: 375px){
 
-                    width: 100%;
+                    /* width: 100%; */
                     margin: auto;
                 }
 
