--- a/resources/sass/components/footer.scss
+++ b/resources/sass/components/footer.scss
@@ -56,7 +56,7 @@
                         &:hover,
                         &:focus,
                         &:active {
-                        color: white;
+                        color: #FABD12;
                         }
                 }
 
