--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -12,7 +12,7 @@
 
         width: 15%;
         height: 100%;
-        padding: 0 20px;
+        padding: 5px 20px;
         display: flex;
         flex-direction: column;
         background-color: #FABD12;
@@ -20,23 +20,40 @@
         font-weight: 600;
         text-transform: capitalize;
 
-        .sidebar-restaurant-link{
-            margin: 20px 0;
-        }
 
-        a{
+        .sidebar-restaurant-link{
 
             text-decoration: none;
-            padding: 2px 5px;
-            border-radius: 5px;
-            margin: 10px 0;
+            margin: 25px 0;
+            
+            a{
+                color: white;
+                text-decoration: none;
+                background-color: #1F8691;
+                border-radius: 5px;
+                padding: 10px 20px;
+
+                 &:hover{
+
+                    background-color: white;
+                    color: #1F8691;
+                }
+            }
+        }
+
+        .navbar-brand{
+
             color: white;
+            text-decoration: none;
             background-color: #1F8691;
+            border-radius: 5px;
+            padding: 10px 20px;
+            margin: 10px 0;
 
-                &:hover{
+                 &:hover{
 
-                    background-color: #1F8691;
-                    color: white;
+                    background-color: white;
+                    color: #1F8691;
                 }
         }
 
