--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -373,12 +373,13 @@
 
     position: relative;
     width: 100%;
-    height: 100%;
-    background: rgb(99 168 195);
+    height: 700px;
+    background-color: #FABD12;
     box-shadow: 5px 10px 18px #14555c;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 50px 0;
 
      @media screen and (max-width: 375px){
 
