DONE: FIX CATEGORIES

--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -845,6 +845,20 @@
 
 }
 
+#create-form-dish{
+
+
+    .input-radio-dish{
+
+        text-align: left;
+
+        span{
+
+            padding-left: 10px;
+        }
+    }
+}
+
 
 
 
