--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -347,7 +347,9 @@
 
                         #selYears{
 
-                             @media screen and (max-width: 375px){
+                            padding-left: 25px;
+
+                            @media screen and (max-width: 375px){
 
                                 padding-left: 25px;
 
